--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p class="odd-number">Number 1 - I'm a class!</p>
+    <div class="odd-number">Number 1 - I'm a class!</div>
     <div id="second">Number 2 - I'm one ID.</div>
-    <p class="odd-number">Number 3 - I'm a class, but cooler!</p>
-    <div class="fourth">Number 4 - I'm another ID.</div>
-    <p class="odd-number">Number 5 - I'm a class!</p>
+    <div class="odd-number">Number 3 - I'm a class, but cooler!</div>
+    <div id="fourth">Number 4 - I'm another ID.</div>
+    <div class="odd-number">Number 5 - I'm a class!</div>
   </body>
 </html>
